feat: init - part4

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "sls:deploy": "sls deploy",
+    "sls:fast:deploy": "sls deploy function -f main",
     "sls:offline": "sls offline",
     "sls:package": "sls package",
     "test:unit": "jest",
@@ -25,11 +26,11 @@
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.3.0",
-    "@nestjs/swagger": "^6.1.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "aws-lambda": "^1.0.6",
     "aws-lambda-fastify": "^1.4.4",
     "lodash": "^4.17.21",
@@ -42,8 +43,8 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@playwright/browser-chromium": "^1.40.1",
     "@playwright/browser-firefox": "^1.40.1",
     "@playwright/browser-webkit": "^1.40.1",
@@ -61,7 +62,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "serverless": "^2.23.0",
+    "serverless": "3.38.0",
     "serverless-offline": "^6.8.0",
     "serverless-plugin-optimize": "^4.1.4-rc.1",
     "serverless-plugin-typescript": "^1.1.9",
